--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill1.3.7-table-module",
+  "name": "quill1.3.7-table-module-custom",
   "type": "module",
   "version": "1.4.2",
   "description": "Module for table in quill@1.3.7.",
